# ps3ida

./: .gitignore  .pre-commit-config.yaml  PS3_HV_Dump.idc  README  analyze_self.idc  analyze_self64.idc  analyze_sprx.idc  common.idh  dump_function_cmt.idc  find_fnids.sh  fnids.idh  fnids_to_idh.tcl  fnids_to_idh2.tcl  ps3.tcl  ps3.xml  resolve_events.idc  syscall_names.idh  xml.tcl
plugins/PPC2C/: PPC2C.sln  ppc2c.cpp  ppc2c_engine.cpp  ppc2c_engine.hpp  ppc2c_handlers.cpp  ppc2c_handlers.hpp
plugins/PPCAltivec/: readme.txt
plugins/PPCAltivec/src/: compile.sh  main.cpp  ppcaltivec.sln  ppcaltivec.vcxproj
plugins/PPCJT/src/: dont_use.cpp  ppcjt.cpp  ppcjt.sln
plugins/fix_rtoc/: CMakeLists.txt  fix_rtoc.sln  main.cpp
plugins/fix_rtoc/cmake/: FindIdaSdk.cmake
